--- a/ManagementService/Makefile
+++ b/ManagementService/Makefile
@@ -69,7 +69,7 @@ push: image
 	$(call push_image,microfn/management)
 
 test: image
-	docker run -i --rm --name management \
+	docker run -i --rm --privileged --name management \
 		--env MFN_DATALAYER=192.168.137.111:4998 \
 		--env MFN_HOSTNAME=$(shell hostname) \
 		--env MFN_ELASTICSEARCH_CONNECT=$(shell hostname):9200 \
@@ -81,7 +81,7 @@ test: image
 		microfn/management
 
 print: image
-	docker run -i --rm --name management \
+	docker run -i --rm --privileged --name management \
 		--env MFN_DATALAYER=192.168.137.111:4998 \
 		--env MFN_HOSTNAME=$(shell hostname) \
 		--env MFN_ELASTICSEARCH_CONNECT=$(shell hostname):9200 \
